Added fixes to unit test files
